iframe and image carousel

--- a/index.html
+++ b/index.html
@@ -25,21 +25,16 @@
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Features</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Pricing</a>
-                        </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
                                 Dropdown link
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li><a class="dropdown-item" href="#Resume">Resume</a></li>
+                                <li><a class="dropdown-item" href="#AboutMe">About Me</a></li>
+                                <li><a class="dropdown-item" href="#Pictures">Pictures</a></li>
+                                <li><a class="dropdown-item" href="#Video">Some Motivation</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -47,5 +42,64 @@
             </div>
         </nav>
     </header>
+
+
+    <section class="Resume-container" id="#Resume">
+
+    </section>
+
+    <section class="AboutME-container" id="#AboutME">
+
+    </section>
+
+    <section class="Pictures-container" id="#Pictures">
+        <div class="slider-wrapper">
+            <div class="slider">
+                <img id="slide-1" src="./img/first-picture.JPG" alt="Hungary soccer stadium">
+                <img id="slide-2" src="./img/second-picture.JPG" alt="night mission picture">
+                <img id="slide-3" src="./img/third-picture.JPG" alt="mission outlook picture">
+                <img id="slide-4" src="./img/fourth-picture.JPEG" alt="Park City gandola">
+                <img id="slide-5" src="./img/fifth-picture.JPG" alt="engagement photo">
+                <img id="slide-6" src="./img/sixth-picture.jpeg" alt="canyon picture">
+                <img id="slide-7" src="./img/seventh-picture.JPG" alt="temple picture">
+                <img id="slide-8" src="./img/eighth-picture.JPEG" alt="reception photo">
+                <img id="slide-9" src="./img/ninth-picture.jpeg" alt="oakley">
+                <img id="slide-10" src="./img/tenth-picture.jpeg" alt="family picture">
+            </div>
+            <div class="slider-nav">
+                <a href="#slide-1"></a>
+                <a href="#slide-2"></a>
+                <a href="#slide-3"></a>
+                <a href="#slide-4"></a>
+                <a href="#slide-5"></a>
+                <a href="#slide-6"></a>
+                <a href="#slide-7"></a>
+                <a href="#slide-8"></a>
+                <a href="#slide-9"></a>
+                <a href="#slide-10"></a>
+            </div>
+        </div>
+    </section>
+
+    <section class="Video-container" id="#Video">
+            <div class="iframe">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/3k-TJ8WBWcg?si=O5wzem_HVwFITocD"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+            </div>
+    </section>
+
+
+
+    <footer>
+        <div class="row text-center border border-5 border-dark">
+            <div class="card">
+                <div class="card-body">
+                    Here is my  <a href="www.linkedin.com/in/harrison-bement-9227a6242">LinkedIn</a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
