--- a/index.html
+++ b/index.html
@@ -11,11 +11,8 @@
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link
-href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com"> <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <link
+href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -182,21 +179,18 @@ rel="stylesheet">
     <section class="carousel-container" id="Pictures">
         <div class="slider-wrapper">
             <div class="slider">
-                <img id="slide-1" src="./img/first-picture.JPG" alt="Hungary soccer stadium">
-                <img id="slide-2" src="./img/third-picture.JPG" alt="mission outlook picture">
-                <img id="slide-3" src="./img/seventh-picture.JPG" alt="temple picture">
-                <img id="slide-4" src="./img/eighth-picture.JPEG" alt="reception photo">
-                <img id="slide-5" src="./img/tenth-picture.jpeg" alt="family picture">
+                <img id="slide-1" src="./img/Oaklyestroller-photo.jpg" alt="Oakley picture">
+                <img id="slide-2" src="./img/first-picture.JPG" alt="mission picture">
+                <img id="slide-3" src="./img/seventh-picture.JPG" alt="wedding picture">
             </div>
             <div class="slider-nav">
                 <a href="#slide-1"></a>
                 <a href="#slide-2"></a>
                 <a href="#slide-3"></a>
-                <a href="#slide-4"></a>
-                <a href="#slide-5"></a>
             </div>
         </div>
     </section>
+
     <section class="Video-container" id="Video">
             <div class="iframe">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/3k-TJ8WBWcg?si=O5wzem_HVwFITocD"
@@ -205,8 +199,6 @@ rel="stylesheet">
                     allowfullscreen></iframe>
             </div>
     </section>
-
-
 
     <footer>
         <div class="row text-center border border-5 border-dark">
