--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
-                                My page
+                                Learn About Me
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="#Resume">Resume</a></li>
