--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1
                                 </tr>
 
                                 <tr>
-                                    <th class="th">This is my entire family. Believe it or not I have nine siblings, two nieces,
+                                    <th class="th">This is my entire family. Believe it or not I have nine siblings, three nieces,
                                         and six nephews. I love them all so much. We have been living in Utah for almost 20
                                         years now. My dad works for Nu Skin as a product manager and my mom is an aerobics
                                         instructor at VASA. I love all of my nieces and nephews; they know me as the fun uncle
@@ -206,7 +206,7 @@ href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1
                 <div class="row justify-content-center align-items-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="text-center">
-                            <img src="./img/family-pic.jpg" class="rounded" alt="family picture">
+                            <img src="./img/tenth-picture.jpeg" class="rounded" alt="family picture">
                         </div>
                     </div>
                 </div>
@@ -214,6 +214,7 @@ href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1
         </main>
     </section>
 
+                <center><a href="#top">Back to top</a></center>
 
     <footer>
         <div class="row text-center border border-5 border-dark">
